--- a/src/app/layout/components/sidebar/sidebar.component.html
+++ b/src/app/layout/components/sidebar/sidebar.component.html
@@ -1,13 +1,16 @@
 <div id="sidebar">
     <mat-nav-list>
+        <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/phone']">
+            <mat-icon>perm_phone_msg</mat-icon> Phone Auth
+        </a>
         <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/users']">
             <mat-icon class="users-icon">people</mat-icon> Users
         </a>
         <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/user']">
-            <mat-icon class="user-icon">people</mat-icon> One User
+            <mat-icon>how_to_reg</mat-icon> One User
         </a>
         <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/cud']">
-            <mat-icon class="sidenav-icon">people</mat-icon> Crud
+            <mat-icon>drag_indicator</mat-icon> Crud
         </a>
     </mat-nav-list>
 </div>
