--- a/src/app/layout/components/topnav/topnav.component.html
+++ b/src/app/layout/components/topnav/topnav.component.html
@@ -3,7 +3,7 @@
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
     </button>
     <div class="nav-brand">
-        FillFlixTask-Ahmed Mobasher
+        Xapp
     </div>
     <div>
         <button mat-icon-button (click)="onLoggedout()">
