--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -18,6 +18,13 @@
                     </mat-form-field>
                 </div>
             </div>
+            <div>
+                <ngx-intl-tel-input 
+                enableAutoCountrySelect="true" enablePlaceholder="true" searchCountryFlag="true"
+                   phoneValidation="true" separateDialCode="true" maxLength="9" name="phone" formControlName="phone">
+               </ngx-intl-tel-input>
+
+            </div>
             <div fxFlex  fxLayout="row" fxLayout.lt-md="column">
                 <div fxFlexFill>
                     <mat-form-field class="w-100">
