--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -19,7 +19,7 @@
                 </div>
             </div>
             <div>
-                <ngx-intl-tel-input 
+                <ngx-intl-tel-input inputId="phone"
                 enableAutoCountrySelect="true" enablePlaceholder="true" searchCountryFlag="true"
                    phoneValidation="true" separateDialCode="true" maxLength="9" name="phone" formControlName="phone">
                </ngx-intl-tel-input>
