--- a/src/app/layout/components/sidebar/sidebar.component.html
+++ b/src/app/layout/components/sidebar/sidebar.component.html
@@ -1,16 +1,19 @@
 <div id="sidebar">
     <mat-nav-list>
-        <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/phone']">
+        <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/features/phone']">
             <mat-icon>perm_phone_msg</mat-icon> Phone Auth
         </a>
-        <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/users']">
+        <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/features/users']">
             <mat-icon class="users-icon">people</mat-icon> Users
         </a>
-        <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/user']">
+        <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/features/user']">
             <mat-icon>how_to_reg</mat-icon> One User
         </a>
-        <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/cud']">
+        <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/features/cud']">
             <mat-icon>drag_indicator</mat-icon> Crud
+        </a>
+        <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/management/addAccessRule']">
+            <mat-icon>drag_indicator</mat-icon> Access Rules
         </a>
     </mat-nav-list>
 </div>
