--- a/src/app/layout/components/sidebar/sidebar.component.html
+++ b/src/app/layout/components/sidebar/sidebar.component.html
@@ -4,7 +4,7 @@
             <mat-icon>perm_phone_msg</mat-icon> Phone Auth
         </a>
         <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/features/users']">
-            <mat-icon class="users-icon">people</mat-icon> Users
+            <mat-icon class="users-icon">people</mat-icon> {{'Users' | translate}}
         </a>
         <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/features/user']">
             <mat-icon>how_to_reg</mat-icon> One User
