--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -11,13 +11,24 @@
                   </div>
             </div>
             <div fxFlex  fxlayout="row" fxlayout.lt-md="column">
+                <div fxFlex  fxlayout="row" fxlayout.lt-md="column">
+                    <div fxFlexFill>
+                        <mat-form-field class="w-100">
+                            <input matInput placeholder="Your name" formControlName="name"  required>
+                            <mat-error *ngIf="RegisterForm.controls.name.invalid">{{'requiredMsg' | translate}}</mat-error>
+                        </mat-form-field>
+                    </div>
+                </div>
                 <div fxFlexFill>
                     <mat-form-field class="w-100">
-                        <input matInput placeholder="Email"  [formControl]="email" required>
-                        <mat-error *ngIf="email.invalid">{{getEmailErrorMessage()}}</mat-error>
+                        <input matInput placeholder="Your email" formControlName="email" required>
+                        <mat-error *ngIf="RegisterForm.controls.email.errors?.required">{{'requiredMsg' | translate}}</mat-error>
+                        <mat-error *ngIf="RegisterForm.controls.email.errors?.pattern">{{'emailVaidationErrorMsg' | translate}}</mat-error>
+
                     </mat-form-field>
                 </div>
             </div>
+    
             <!-- <div>
                 <ngx-intl-tel-input inputId="phone"
                 enableAutoCountrySelect="true" enablePlaceholder="true" searchCountryFlag="true"
@@ -28,24 +39,30 @@
             <div fxFlex  fxLayout="row" fxLayout.lt-md="column">
                 <div fxFlexFill>
                     <mat-form-field class="w-100">
-                        <input matInput type="number" placeholder="Phone" formControlName="phone"  required>
-                        <mat-error *ngIf="RegisterForm.controls.phone.invalid">required</mat-error>
+                        <input matInput type="string" placeholder="Your phone" formControlName="phoneNumber"  required>
+                        <mat-error *ngIf="RegisterForm.controls.phoneNumber.errors?.required">{{'requiredMsg' | translate}}</mat-error>
+                        <mat-error *ngIf="RegisterForm.controls.phoneNumber.errors?.pattern">{{'phoneVaidationErrorMsg' | translate}}</mat-error>
+                        
                     </mat-form-field>
                 </div>
             </div>
             <div fxFlex  fxLayout="row" fxLayout.lt-md="column">
                 <div fxFlexFill>
                     <mat-form-field class="w-100">
-                        <input matInput type="password" placeholder="Password" [formControl]="password" required>
-                        <mat-error *ngIf="password.invalid">required</mat-error>
+                        <input matInput [type]="hide ? 'password' : 'text'" placeholder="Your password" formControlName="password"  required>
+                        <mat-icon matSuffix (click)="hide = !hide">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+                        <mat-error *ngIf="RegisterForm.controls.password.errors?.required">{{'requiredMsg' | translate}}</mat-error>
+                        <mat-error *ngIf="RegisterForm.controls.password.errors?.pattern">{{'passwordVaidationErrorMsg' | translate}}</mat-error>
                     </mat-form-field>
                 </div>
             </div>
             <div fxFlex  fxLayout="row" fxLayout.lt-md="column">
                 <div fxFlexFill>
                     <mat-form-field class="w-100">
-                        <input matInput type="password" placeholder="Password" [formControl]="password" required>
-                        <mat-error *ngIf="password.invalid">required</mat-error>
+                        <input matInput [type]="hide ? 'password' : 'text'" placeholder="Retype your password" [formControl]="confirmPassword" required>
+                        <mat-icon matSuffix (click)="hide = !hide">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+                        <mat-error *ngIf="confirmPassword.errors?.required">{{'requiredMsg' | translate}}</mat-error>
+                        <mat-error *ngIf="confirmPassword.errors?.match">{{'passwordMatchigErrorMsg' | translate}}</mat-error>
                     </mat-form-field>
                 </div>
             </div>
