--- a/src/app/management-system/components/access-rules-form/access-rules-form.component.scss
+++ b/src/app/management-system/components/access-rules-form/access-rules-form.component.scss
@@ -1,10 +1,7 @@
 .mat-form-field{
-    background-color: white !important;
     width: 65%;
-    margin-top: 10px;
-
 }
-.mat-form-field-appearance-fill .mat-form-field-flex{
-    background-color: white !important;
-
-}
+// .mat-form-field-appearance-fill .mat-form-field-flex {
+//     background-color: rgb(239 229 229 / 4%) !important;
+//     border: 1px solid #ccc !important;
+// }
