--- a/src/app/layout/components/sidebar/sidebar.component.html
+++ b/src/app/layout/components/sidebar/sidebar.component.html
@@ -12,7 +12,7 @@
         <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/features/cud']">
             <mat-icon>drag_indicator</mat-icon> Crud
         </a>
-        <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/management/addAccessRule']">
+        <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/management/AccessRules']">
             <mat-icon>drag_indicator</mat-icon> Access Rules
         </a>
     </mat-nav-list>
