--- a/src/app/management-system/components/access-rules-form/access-rules-form.component.html
+++ b/src/app/management-system/components/access-rules-form/access-rules-form.component.html
@@ -53,21 +53,6 @@
                               <mat-option *ngFor="let item of permissions" [value]="item.id">
                                 {{item.name}}
                               </mat-option>
-                              <mat-option *ngFor="let item of permissions" [value]="item.id">
-                                {{item.name}}
-                              </mat-option>
-                              <mat-option *ngFor="let item of permissions" [value]="item.id">
-                                {{item.name}}
-                              </mat-option>
-                              <mat-option *ngFor="let item of permissions" [value]="item.id">
-                                {{item.name}}
-                              </mat-option>
-                              <mat-option *ngFor="let item of permissions" [value]="item.id">
-                                {{item.name}}
-                              </mat-option>
-                              <mat-option *ngFor="let item of permissions" [value]="item.id">
-                                {{item.name}}
-                              </mat-option>
                             </mat-select>
                           </mat-form-field>
                     </div>
@@ -77,7 +62,7 @@
                         <ng-multiselect-dropdown
                         [placeholder]="'ChooseButtons' | translate"
                         [settings]="dropdownSettings"
-                        [data]="permissions"
+                        [data]="screenButtons"
                         formControlName="buttons"
                       > </ng-multiselect-dropdown>
                     </div>
