--- a/src/app/shared/components/mat-table/mat-table.component.html
+++ b/src/app/shared/components/mat-table/mat-table.component.html
@@ -1,23 +1,44 @@
 <div class="mb-20" flFlex flexLayout="row" flexLayout.lt-md="column">
     <div fxFlex>
         <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-            <ng-container matColumnDef="id">
+            <ng-container matColumnDef="no">
                 <th mat-header-cell *matHeaderCellDef> No. </th>
                 <td mat-cell *matCellDef="let element;let i = index;"> {{i+1}} </td>
             </ng-container>
             <ng-container matColumnDef="name">
                 <th mat-header-cell *matHeaderCellDef> Name </th>
-                <td mat-cell *matCellDef="let element"> {{element.first_name}} {{element.last_name}} </td>
+                <td mat-cell *matCellDef="let element"> {{element.name}} </td>
             </ng-container>
-            <ng-container matColumnDef="email">
-                <th mat-header-cell *matHeaderCellDef> Email </th>
-                <td mat-cell *matCellDef="let element"> {{element.email}} </td>
+            <ng-container matColumnDef="actions">
+                <th mat-header-cell *matHeaderCellDef>Actions </th>
+                <td mat-cell *matCellDef="let element">    
+                  
+                    <button mat-raised-button color="primary" class="w-30" routerLink="/management/addAccessRule">
+                     <mat-icon>add_circle</mat-icon> 
+                     {{'Add' | translate}}
+                    </button>
+                    <button mat-raised-button color="primary" class="w-30 mx-2" routerLink="/management/addAccessRule">
+                    <mat-icon>edit</mat-icon>
+                     {{'Edit' | translate}}
+                    </button>
+                    <button mat-raised-button color="accent" class="w-30 " (click)="openDeleteDialog()">
+                        <mat-icon> cancel_presentation</mat-icon>
+                        {{'Delete' | translate}}
+                       </button>
+                </td>
             </ng-container>
-            <ng-container matColumnDef="avatar">
-                <th mat-header-cell *matHeaderCellDef> Avatar </th>
-                <td mat-cell *matCellDef="let element">
-                    <img [src]="element.avatar" alt="avatar">
-                    </td>
+            <ng-container matColumnDef="permissions">
+                <th mat-header-cell *matHeaderCellDef> Permissions </th>
+                <td mat-cell *matCellDef="let element"> 
+                    <ol>
+                        <li *ngFor="let p of element.permissions">
+                            <mat-icon *ngIf="p.permissionType == 1">screen_lock_landscape</mat-icon>
+                            <mat-icon  *ngIf="p.permissionType == 2"> edit_attributes</mat-icon>
+
+
+                             {{p.permissionName}} - {{p.permissionTypeName}}</li>
+                    </ol>
+                </td>
             </ng-container>
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
