--- a/src/app/layout/components/sidebar/sidebar.component.html
+++ b/src/app/layout/components/sidebar/sidebar.component.html
@@ -1,17 +1,17 @@
 <div id="sidebar">
     <mat-nav-list>
-        <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/features/phone']">
+        <!-- <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/features/phone']">
             <mat-icon>perm_phone_msg</mat-icon> Phone Auth
-        </a>
+        </a> -->
         <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/features/users']">
             <mat-icon class="users-icon">people</mat-icon> {{'Users' | translate}}
         </a>
-        <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/features/user']">
+        <!-- <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/features/user']">
             <mat-icon>how_to_reg</mat-icon> One User
         </a>
         <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/features/cud']">
             <mat-icon>drag_indicator</mat-icon> Crud
-        </a>
+        </a> -->
         <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/management/AccessRules']">
             <mat-icon>drag_indicator</mat-icon> Access Rules
         </a>
