--- a/src/app/shared/components/mat-table/mat-table.component.html
+++ b/src/app/shared/components/mat-table/mat-table.component.html
@@ -13,6 +13,11 @@
                 <th mat-header-cell *matHeaderCellDef class="text-center">Actions </th>
                 <td mat-cell *matCellDef="let element" class="text-center">    
                 
+                    <button mat-raised-button color="primary" class="w-30 mx-2" (click)="ViewPermissions(element)">
+                        <mat-icon>remove_red_eye</mat-icon>
+
+                     {{'ViewPermissions' | translate}}
+                    </button>
                     <button mat-raised-button color="primary" class="w-30 mx-2" (click)="editRoles(element)">
                     <mat-icon>edit</mat-icon>
                      {{'Edit' | translate}}
@@ -23,7 +28,7 @@
                        </button>
                 </td>
             </ng-container>
-            <ng-container matColumnDef="permissions">
+            <!-- <ng-container matColumnDef="permissions">
                 <th mat-header-cell *matHeaderCellDef> Permissions </th>
                 <td mat-cell *matCellDef="let element"> 
                     <ol>
@@ -35,7 +40,7 @@
                             </li>
                     </ol>
                 </td>
-            </ng-container>
+            </ng-container> -->
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         </table>
