--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -20,3 +20,28 @@ mat-icon{
 em{
     color: #f44336;
 }
+
+table {
+    width: 100%;
+}
+.mat-card {
+    text-align: center;
+    img {
+        border-radius: 5px;
+        margin-top: -25px;
+    }
+}
+.mat-table {
+    box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.14),
+        0 1px 5px 0 rgba(0, 0, 0, 0.12);
+        img{
+            border-radius: 50%;
+            padding: 20px 0;
+            max-width: 100%;
+        }
+}
+
+.mat-dialog-actions{
+    width: 100%;
+    justify-content: end;
+}
