--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -29,7 +29,7 @@
             <div fxFlex  fxLayout="row" fxLayout.lt-md="column">
                 <div fxFlexFill>
                   
-                    <p style="cursor: pointer; color: blue;" (click)="showResetPassword()">{{'Forget Password ?' | translate}}</p>
+                    <p style="cursor: pointer; color: blue;" (click)="forgetPassword()">{{'Forget Password ?' | translate}}</p>
                     
                 </div>
             </div>
