--- a/src/app/authentication/componenets/forget-password/forget-password.component.html
+++ b/src/app/authentication/componenets/forget-password/forget-password.component.html
@@ -1,7 +1,6 @@
 <div class="page-wrapper">
 	<div class="auth-bg">
 		<div class="authentication-box">
-			<div class="text-center">Xapp</div>
 			<div class="card mt-4">
 				<div class="card-body">
 					<div class="text-center">
@@ -10,20 +9,22 @@
 							{{'Please enter code that you recieved on your email to reset your password' | translate}}
 						  </div>
 					</div>
-					<form class="theme-form" [formGroup]="restPassForm">
+					<form class="theme-form my-2" [formGroup]="restPassForm">
 						<div class="form-group">
 							<div class="form-row col-md-12">
+								<em class="text-danger">*</em>
 								<label class="col-form-label pt-0">{{'Code' | translate}}</label>
-								<input class="form-control" formControlName="code" type="text" required
-								[ngClass]="{'input-error': restPassForm.controls.code.touched &&  restPassForm.controls.code.invalid}">
-								<em *ngIf="restPassForm.controls.code.touched && restPassForm.controls.code.errors?.required"
+								<input class="form-control" formControlName="secret_code" type="text" placeholder="Enter code" required
+								[ngClass]="{'input-error': restPassForm.controls.secret_code.touched &&  restPassForm.controls.secret_code.invalid}">
+								<em *ngIf="restPassForm.controls.secret_code.touched && restPassForm.controls.secret_code.errors?.required"
 									class="text text-danger mt-1">
 									{{'Code is required' | translate}}
 								  </em>
 							</div>
 							<div class="form-row col-md-12 my-2">
+								<em class="text-danger">*</em>
 								<label class="col-form-label pt-0">{{'New Password' | translate}}</label>
-								<input (ngModelChange)="this.restPassForm.controls.confirmPassword.reset()" class="form-control" formControlName="password" type="password" required
+								<input (ngModelChange)="this.restPassForm.controls.confirmPassword.reset()" placeholder="Enter new password" class="form-control" formControlName="password" type="password" required
 								[ngClass]="{'input-error': restPassForm.controls.password.touched &&  restPassForm.controls.password.invalid}">
 								<em *ngIf="restPassForm.controls.password.touched && restPassForm.controls.password.errors?.required"
 									class="text text-danger mt-1">
@@ -36,8 +37,9 @@
 								  </em>
 							</div>
 							<div class="form-row col-md-12">
+								<em class="text-danger">*</em>
 								<label class="col-form-label pt-0">{{'Confirm Password' | translate}}</label>
-								<input (ngModelChange)="onChange($event)" class="form-control" formControlName="confirmPassword" type="password" required
+								<input (ngModelChange)="onChange($event)" placeholder="Retype password.." class="form-control" formControlName="confirmPassword" type="password" required
 								[ngClass]="{'input-error': restPassForm.controls.confirmPassword.touched &&  restPassForm.controls.confirmPassword.invalid}">
 								<em *ngIf="restPassForm.controls.confirmPassword.touched &&
 								restPassForm.controls.confirmPassword.errors?.match" class="text-danger">
